fix create person api